--- a/ChangeLog
+++ b/ChangeLog
@@ -332,6 +332,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * definicje styli okna rozmowy wydzielone jako klasy do chat_styles.cpp/h (adrian)
 * formatowanie wiadomo¶ci wydzielone jako funkcja formatMessage
   w klasie ChatMessage (adrian)
+* klasy ChatColors, OwnChatColors, UserChatColors (adrian)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
