--- a/ChangeLog
+++ b/ChangeLog
@@ -336,6 +336,11 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * usuniêta mo¿liwo¶æ wy³±czenia zapisywania rozmiaru g³ównego okna (joi)
 * poprawiony uk³ad widgetów w oknie konfiguracji przy innych poziomach ni¿ "Ekspert" (joi)
 * usuniêta zabugowana i rzadko u¿ywana opcja skrolowania wiadomo¶ci w chacie w górê (joi)
+* w oknach: eksportu listy kontaktów, wyszukiwania kontaktów, mened¿erze modu³ów,
+  o programie, ignorowanych, informacji o kontakcie, w³asnych danych personalnych,
+  wyboru ¶cie¿ek (konfiguracja), przypominania has³a, rejestracji nowego konta,
+  zmiany has³a, wyrejestrowania konta zrobione obej¶cie b³êdu w Qt, dziêki któremu
+  mo¿na by³o zmniejszyæ rozmiar okna poni¿ej minimalnego rozmiaru (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
