--- a/ChangeLog
+++ b/ChangeLog
@@ -345,6 +345,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   Licencja GPL szczegoly w pliku czytaj.txt (Ron_K)
 * stary zestaw emotikon w autodownloadzie (Ron_K)
 * mechanizm autodownloadu zestawów emotikonów (Ron_K, adrian)
+* mo¿liwo¶æ zapisania obrazka z okna rozmowy przez wybranie opcji w menu
+  kontekstowym (montor,joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
