fixing saving image in chat
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3820 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -354,6 +354,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   przy okazji binarka kadu zmala³a o 50 kB (joi)
 * poprawiona wywrotka przy wy³adowywaniu modu³u dcc (joi)
 * ======= FEATURE FREEZE ======= (adrian)
+* poprawka b³êdu przy zapisywaniu obrazka z chata - je¿eli okno nie by³o
+  wype³nione tekstem i kliknê³o siê poni¿ej obrazka (na tle), to w menu
+  kontekstowym dostêpna by³a opcja zapisu obrazka (montor/joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
