handler for warnings from Qt
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3825 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -358,6 +358,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   wype³nione tekstem i kliknê³o siê poni¿ej obrazka (na tle), to w menu
   kontekstowym dostêpna by³a opcja zapisu obrazka (montor/joi)
 * usuniête kilka niewielkich wycieków pamiêci + ogólne sprz±tanie w ConfigDialogu (joi)
+* przechwytujemy b³êdy, które wy³apuje Qt i kolorujemy je wraz z pokazaniem
+  backtrace'a (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
