--- a/ChangeLog
+++ b/ChangeLog
@@ -364,6 +364,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   klawiszowymi (montor/adrian)
 * poprawka wywrotki w module encryption gdy dostajemy od serwera wiadomo¶æ o d³ugo¶ci 0 (joi)
 * przestawiona domy¶lna sk³adnia panelu informacyjnego na sk³adniê Dorregaraya (joi)
+* menu zmiany statusu, po klikniêciu na trayu, pojawia siê 10 pikseli od miesca
+  klikniêcia (a nie dok³adnie w) (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
