--- a/ChangeLog
+++ b/ChangeLog
@@ -367,6 +367,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * menu zmiany statusu, po klikniêciu na trayu, pojawia siê 10 pikseli od miesca
   klikniêcia (a nie dok³adnie w) (joi)
 * uproszczenie kodu sprawdzaj±cego poprawno¶æ numeru gg w oknie danych o kontakcie (neeo/joi)
+* aktualizacja libgadu do wersji 20060518 + zmiany w Kadu dotycz±ce obs³ugi
+  nowych b³êdów zwracanych przez libgadu (neeo/joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
