--- a/ChangeLog
+++ b/ChangeLog
@@ -374,7 +374,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   usuniête polskie znaki z wiadomo¶ci (neeo/joi)
 * szereg usprawnieñ dotycz±cych sprawdzania poprawno¶ci wpisanych danych
   w oknie szukania kontaktów w katalogu (neeo/joi)
-* przy wybraniu opcji "ukryj niedostêpnych" pokazujemy na ukrytych (Shinjin/joi)
+* przy wybraniu opcji "ukryj niedostêpnych" pokazujemy ukrytych (Shinjin/joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
