--- a/ChangeLog
+++ b/ChangeLog
@@ -376,6 +376,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   w oknie szukania kontaktów w katalogu (neeo/joi)
 * przy wybraniu opcji "ukryj niedostêpnych" pokazujemy ukrytych (Shinjin/joi)
 * poprawione dzia³anie funkcji unicode2std i unicode2latinUrl (joi)
+* poprawka wywrotki w alsa_sound (u mnie gdy gra amarok 1.4 przez xine
+  z wyj¶ciem alsa) (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
