--- a/ChangeLog
+++ b/ChangeLog
@@ -376,9 +376,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   w oknie szukania kontaktów w katalogu (neeo/joi)
 * przy wybraniu opcji "ukryj niedostêpnych" pokazujemy ukrytych (Shinjin/joi)
 * poprawione dzia³anie funkcji unicode2std i unicode2latinUrl (joi)
-* poprawka wywrotki w alsa_sound (u mnie gdy gra amarok 1.4 przez xine
-  z wyj¶ciem alsa) (joi)
-* szereg poprawek (~200), które wynik³y z zastosowania do kompilacji flag
+* poprawka wywrotki w alsa_sound (u mnie pojawia³a siê gdy gra³ amarok 1.4
+  przez xine z wyj¶ciem alsa) (joi)
+* szereg drobnych poprawek (~200), które wynik³y z zastosowania do kompilacji flag
   -Wextra -Weffc++: niezainicjowane lub nieu¿ywane zmienne, zabezpieczenia przed
   niew³a¶ciwym u¿yciem - brak konstruktorów kopiuj±cych, operatorów przypisania (joi)
 
