--- a/ChangeLog
+++ b/ChangeLog
@@ -381,6 +381,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * szereg drobnych poprawek (~200), które wynik³y z zastosowania do kompilacji flag
   -Wextra -Weffc++: niezainicjowane lub nieu¿ywane zmienne, zabezpieczenia przed
   niew³a¶ciwym u¿yciem - brak konstruktorów kopiuj±cych, operatorów przypisania (joi)
+* usuniête kilka drobnych wycieków pamiêci (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
