--- a/ChangeLog
+++ b/ChangeLog
@@ -382,6 +382,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   -Wextra -Weffc++: niezainicjowane lub nieu¿ywane zmienne, zabezpieczenia przed
   niew³a¶ciwym u¿yciem - brak konstruktorów kopiuj±cych, operatorów przypisania (joi)
 * usuniête kilka drobnych wycieków pamiêci (joi)
+* drobne optymalizacje w formatowaniu wiadomo¶ci gdy wy³±czone jest usuwanie nag³ówków (neeo/joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
