few corrections for new default emoticons theme
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3867 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -388,7 +388,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   - z kontaktem, który ma tylko numer telefonu przy pomocy przycisku w g³ównym toolbarze
   (neeo/joi)
 * autoresponder korzysta z parsera Kadu (joi)
-* nowe emotikony Penguins stare odesz³y do lamusa (Ron_K)
+* nowe emotikony "Penguins" - stare odesz³y do lamusa (Ron_K)
+* kilka poprawek zwi±zanych z nowymi emotikonami (joi)
+
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
   w oknie konfiguracji (adrian)
