--- a/ChangeLog
+++ b/ChangeLog
@@ -390,6 +390,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * autoresponder korzysta z parsera Kadu (joi)
 * nowe emotikony "Penguins" - stare odesz³y do lamusa (Ron_K)
 * kilka poprawek zwi±zanych z nowymi emotikonami (joi)
+* automatyczne usuwanie zakoñczonych transferów z "okna przesy³ania plików" (Vogel/joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
