--- a/ChangeLog
+++ b/ChangeLog
@@ -395,6 +395,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * drobne optymalizacje (neeo/joi)
 * poprawka wywrotki przy pierwszym wej¶ciu do konfiguracji je¿eli locale ustawione
   by³y na inne ni¿: pl|de|it|en|fr (joi)
+* usuniêcie, pojawiaj±cego siê na konsoli, ostrze¿enia od Qt przy otworzeniu okna rozmowy (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
