adding contacts to groups through "drag and drop"
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3879 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -397,6 +397,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   by³y na inne ni¿: pl|de|it|en|fr (joi)
 * usuniêcie, pojawiaj±cego siê na konsoli, ostrze¿enia od Qt przy otworzeniu okna rozmowy (joi)
 * poprawione przenoszenie (drag and drop) kontaktów pomiêdzy grupami (joi)
+* mo¿liwo¶æ dodania (a nie tylko przeniesienia) u¿ytkownika do grupy przy pomocy "drag and drop" (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
