fix for main window resizing
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3885 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -405,6 +405,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   powoduje otwarcie pustego okna (neeo/joi)
 * obej¶cie zepsutego (?) libca na FreeBSD - sortowanie listy kontaktów bez
   uwzglêdniania wielko¶ci liter (joi)
+* poprawka skalowania g³ównego okna - menu potrafi³o zas³oniæ toolbar (pinkworm/joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
