--- a/ChangeLog
+++ b/ChangeLog
@@ -411,6 +411,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * przed usuniêciem toolbara pytamy siê czy u¿ytkownik naprawdê chce go usun±æ 
   + poprawki 2 segfaultów (neeo,joi)
 * nowa akcja: ignoruj u¿ytkownika/konferencjê (neeo,joi)
+* kolejne poprawki zwi±zane z layoutem g³ównego okna (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
