saving config to temporary file
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3899 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -418,6 +418,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   konfiguracyjnym (joi)
 * dopisane do rotacji 3 nowe adresy serwerów gg (joi)
 * dodane do autodownloadu 3 modu³y: filtering, powerkadu, profiles (joi)
+* zapisywanie konfiguracji do tymczasowego pliku, a pó¼niej zmiana nazwy na docelowy,
+  ¿eby unikn±æ wyczyszczenia pliku w przypadku segfaulta (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
