--- a/ChangeLog
+++ b/ChangeLog
@@ -428,7 +428,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * niewielka poprawka do skryptu configure, pomagaj±ca w kompilacji na OpenBSD (Prezu/joi)
 * nowa akcja: "Blokuj kontakt" (neeo/joi)
 * czyszczenie okna rozmowy nie powoduje ju¿ ukradniêcie focusu (Juzef/joi)
-* poprawne ustalenie proporcji w oknie rozmowy (montor/joi)
+* poprawne ustalenie proporcji w oknie rozmowy + poprawka wygl±du okna konferencji (montor/joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
