--- a/ChangeLog
+++ b/ChangeLog
@@ -432,6 +432,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawna inicjalizacja przy ca³kowicie pustym pliku konfiguracyjnym (Juzef/joi)
 * notify: przy wybranej opcji "Powiadamiaj o wszystkich kontaktach" pomijamy siebie (Juzef,neeo/joi)
 * je¿eli nie podamy kryteriów, szukanie w katalogu publicznym jest niemo¿liwe (Vogel,neeo/joi)
+* poprawna obs³uga b³êdów odczytu obrazków do wys³ania (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
