--- a/ChangeLog
+++ b/ChangeLog
@@ -433,6 +433,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * notify: przy wybranej opcji "Powiadamiaj o wszystkich kontaktach" pomijamy siebie (Juzef,neeo/joi)
 * je¿eli nie podamy kryteriów, szukanie w katalogu publicznym jest niemo¿liwe (Vogel,neeo/joi)
 * poprawna obs³uga b³êdów odczytu obrazków do wys³ania (joi)
+* poprawna obs³uga opcji configure: --libdir --datadir --bindir (ustawiane przez
+  m.in. przez rpmbuild) (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
