preserve permissions to .so files
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3917 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -435,6 +435,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawna obs³uga b³êdów odczytu obrazków do wys³ania (joi)
 * poprawna obs³uga opcji configure: --libdir --datadir --bindir (ustawiane przez
   m.in. przez rpmbuild) (joi)
+* zachowujemy uprawnienia do plików .so przy instalacji modu³ów (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
