executing commands from parser (disabled by default)
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3923 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -436,7 +436,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawna obs³uga opcji configure: --libdir --datadir --bindir (ustawiane przez
   m.in. przez rpmbuild) (joi)
 * zachowujemy uprawnienia do plików .so przy instalacji modu³ów (joi)
-* aktualizacja gnuconfig (joi)
+* aktualizacja gnuconfig do wersji 2006.08.14 (joi)
+* opcja umo¿liwiaj±ca w³±czenie obs³ugi uruchamiania poleceñ w parserze
+  (domy¶lnie wy³±czona) (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
