crash in "hints on userbox"
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3931 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -446,6 +446,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   li¶cie kontaktów) (joi)
 * poprawiony b³±d niezapisywania siê ostatniego statusu na czystym profilu (joi)
 * kilka b³êdów zwi±zanych z niezapisywaniem siê domy¶lnych warto¶ci opcji (joi)
+* usuniêta wywrotka w obs³udze dymków nad list± kontaktów (po przeci±gniêciu
+  kontaktu poza okno programu i najechaniu na pokazuj±cy siê dymek) (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
