--- a/ChangeLog
+++ b/ChangeLog
@@ -448,6 +448,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * kilka b³êdów zwi±zanych z niezapisywaniem siê domy¶lnych warto¶ci opcji (joi)
 * usuniêta wywrotka w obs³udze dymków nad list± kontaktów (po przeci±gniêciu
   kontaktu poza okno programu i najechaniu na pokazuj±cy siê dymek) (joi)
+* poprawiona wywrotka programu (na ¶wie¿ym profilu) w chwili otwarcia okna
+  rozmowy, je¿eli nie by³o zainstalowanego zestawu emotikon 'penguins' (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
