--- a/ChangeLog
+++ b/ChangeLog
@@ -450,6 +450,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   kontaktu poza okno programu i najechaniu na pokazuj±cy siê dymek) (joi)
 * poprawiona wywrotka programu (na ¶wie¿ym profilu) w chwili otwarcia okna
   rozmowy, je¿eli nie by³o zainstalowanego zestawu emotikon 'penguins' (joi)
+* poprawiony b³±d niezapisywania siê ostatnio widocznej grupy kontaktów (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
