--- a/ChangeLog
+++ b/ChangeLog
@@ -451,6 +451,10 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawiona wywrotka programu (na ¶wie¿ym profilu) w chwili otwarcia okna
   rozmowy, je¿eli nie by³o zainstalowanego zestawu emotikon 'penguins' (joi)
 * poprawiony b³±d niezapisywania siê ostatnio widocznej grupy kontaktów (joi)
+* spora optymalizacja wy¶wietlania animowanych emotikon/obrazków,
+  poprawione problemy ze znikaniem separatorów w oknie rozmowy,
+  mo¿liwo¶æ ustawienia obrazka w tle oknie rozmowy - na razie oznaczone
+  jako eksperymentalna (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
