new developer addes
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3936 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/AUTHORS
+++ b/AUTHORS
@@ -14,6 +14,9 @@ dokumentacja projektu, opiekun t³umaczeñ
 Marcin ¦lusarz <joi (at) kadu (dot) net>
 programista
 
+neeo <neeo (at) kadu (dot) net)
+programista
+
 
  Ludzie którzy nie wspieraj± ju¿ aktywnie projektu:
 ============================================================
