--- a/AUTHORS
+++ b/AUTHORS
@@ -14,7 +14,7 @@ dokumentacja projektu, opiekun t³umaczeñ
 Marcin ¦lusarz <joi (at) kadu (dot) net>
 programista
 
-neeo <neeo (at) kadu (dot) net)
+neeo <neeo (at) kadu (dot) net>
 programista
 
 
