added my personals
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3939 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/AUTHORS
+++ b/AUTHORS
@@ -14,7 +14,7 @@ dokumentacja projektu, opiekun t³umaczeñ
 Marcin ¦lusarz <joi (at) kadu (dot) net>
 programista
 
-neeo <neeo (at) kadu (dot) net>
+Dawid Stawiarski <neeo (at) kadu (dot) net>
 programista
 
 
