more people to thank
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3944 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/THANKS
+++ b/THANKS
@@ -13,5 +13,8 @@ Dariusz "Arcisz" Arciszewski
 Gabor "Kid" Wnuk
 Kuba "Sad Mephisto" Ho³ubinka
 Tomasz "Dorregaray" Rostañski
+Marek "Kubi¶" Kubicki
+£ukasz "sarven" Florczak
+Kamil "Arvenil" Dziedzic
 Manuel Wiblishauser and Jens Zettelmeyer - kadu_de
 i inni...
